# phytofsm

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  shell.nix
.github/workflows/: ci.yml  fuzz.yml  release.yml
examples/: four_seasons.rs  rtc.rs
src/: \  error.rs  file.rs  fsm.rs  lib.rs  logging.rs  options.rs  reference.rs  test.puml
src/codegen/: deferred.rs  extract.rs  generators.rs  ident.rs  mod.rs
src/fsm/: mod.rs  model.rs
src/fsm/builder/: inheritance.rs  mod.rs  scoped_arena.rs  validation.rs
src/fsm/builder/tests/: action_tests.rs  build_validation_tests.rs  deferred_event_tests.rs  enter_state_tests.rs  mod.rs  state_tests.rs  substate_tests.rs  transition_tests.rs
src/fsm/model/: fsm.rs  mod.rs  state.rs  transition.rs
src/parser/: builder.rs  context.rs  fsm.rs  mod.rs  nom.rs  plantuml.pest  plantuml.rs  types.rs  uml.pest  uml.rs
src/parser/builder/: mod.rs  scoped_arena.rs  validation.rs
src/parser/builder/tests/: action_tests.rs  build_validation_tests.rs  deferred_event_tests.rs  enter_state_tests.rs  mod.rs  scoped_arena_tests.rs  state_tests.rs  substate_tests.rs  transition_tests.rs
src/plantuml/: mod.rs
src/test/: mod.rs  utils.rs
src/test/actions/: actions.puml  enter_exit.puml  mod.rs  shared_action.puml
src/test/composite_states/: composite_states.puml  mod.rs  same_name_substates.puml  substate_to_substate.puml
src/test/deferred_events/: deferred.puml  mod.rs
src/test/four_seasons/: four_seasons.puml  four_seasons_new.puml  mod.rs  reference.rs
src/test/misc/: internal_names.puml  mod.rs
src/test/self_transition/: mod.rs  self_transition.puml
src/test/transitions/: direct_transitions.puml  guards.puml  internal_transitions.puml  mod.rs  transitions.puml
src/test_data/: mod.rs  simple.puml
tests/: actions.rs  composite_states.rs  data_types.rs  deferred_events.rs  direct_transitions.rs  enter_exit.rs  four_seasons.rs  guards.rs  integration.rs  internal_transitions.rs  self_transition.rs  simple_four_seasons.rs  substate_to_substate.rs  transitions.rs
tests/four_seasons/: fuzz.rs  main.rs  reference.rs
