[package]
name = "phyto-fsm"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
derive_more = { version = "2.0", features = ["from", "into"] }
heck = "0.5"
itertools = "0.14"
log = "0.4"
nom = "8.0"
nom-language = "0.1.0"
proc-macro2 = "1.0.95"
quote = "1.0"
syn = "2.0"
thiserror = "2.0"

[dev-dependencies]
mockall = "0.13"
stderrlog = "0.6"
trybuild = "1.0"
