[package]
name = "phyto-fsm"
version = "0.1.0"
edition = "2024"
description = "A Rust procedural macro for generating type-safe state machines from PlantUML diagrams"
license = "MIT"
repository = "https://github.com/TobTheRock/phytofsm"
documentation = "https://docs.rs/phyto-fsm"
authors = ["Tobias Waurick"]
keywords = ["fsm", "state-machine", "plantuml", "procedural-macro", "code-generation"]
categories = ["development-tools", "parsing"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
derive_more = { version = "2.0", features = ["from", "into"] }
heck = "0.5"
itertools = "0.14"
log = "0.4"
nom = "8.0"
nom-language = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = {version = "2.0", features = ["parsing"]}
thiserror = "2.0"

[dev-dependencies]
mockall = "0.13"
stderrlog = "0.6"
mock-logger = "0.1"
trybuild = "1.0"
